# Playnite-kiosk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  about.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: admin-provisioning.md  windows-kiosk-deployment.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  db.rs  discovery.rs  error.rs  launcher.rs  lib.rs  main.rs  models.rs
src/components/: AdminModal.tsx  GameCard.tsx  LaunchOverlay.tsx
src/data/: demoGames.ts
src/services/: admin.ts  library.ts
src/store/: useLibraryStore.ts
src/types/: admin.ts  game.ts
